--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">From US to EU</string>
-    <string name="edit_number_hint">Type a number</string>
+    <string name="edit_number_hint">55.5</string>
     <string name="convert_title_text">Number:</string>
     <string name="toggle_text_EU">EU</string>
     <string name="toggle_text_US">US</string>
