Refactoring towards clean architecture. Added Interactor class to manage repositories Added DataSource classes that are managed by repositories Added mappers between entity, domain & ui model classes All calculations for UI moved into ViewModel Calculator intent wrapped into ValueWrapper class to prevent repeated triggering after orientation change

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,5 +28,6 @@
     <string name="menu_tab_currency">Валюта</string>
     <string name="tab_under_development_text">Извините, в данный момент эта вкладка находится в разработке</string>
     <string name="litres">Литров</string>
+    <string name="down_arrow_image_description">Ваше число эквивалентно</string>
 
 </resources>
