--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="cad" translatable="false">CAD</string>
     <string name="aud" translatable="false">AUD</string>
     <string name="chf" translatable="false">CHF</string>
+    <string name="down_arrow_image_description">Your number is equal to</string>
 
 </resources>
