Implemented network errors handling. Updated UI. Code refactoring. State pattern for UI management using sealed class. State pattern for repository management using provider class. Removed data binding's LiveData observing from main activity.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,5 +26,8 @@
     <string name="tab_under_development_text">Извините, в данный момент эта вкладка находится в разработке</string>
     <string name="litres">Литров</string>
     <string name="down_arrow_image_description">Ваше число эквивалентно</string>
+    <string name="error_image_description">Ошибка</string>
+    <string name="try_again_button_text">Обновить</string>
+    <string name="network_error_text">Ошибка сети. Проверьте интернет соединение и нажмите обновить.</string>
 
 </resources>
